--- a/wineshare/src/main/resources/templates/admin/dataList.html
+++ b/wineshare/src/main/resources/templates/admin/dataList.html
@@ -30,7 +30,7 @@
 
         input[type="text"]{
             width:10%;
-            height:20px;
+            height:30px;
             }
 
         .data-all{
@@ -45,6 +45,9 @@
         .data-btn{
             font-size:10px;
             color:#FFFFFF;
+            border: 1px solid #c02323;
+            border-radius: 5px;
+
         }
 
 
@@ -73,7 +76,7 @@
         <div class="data-all">
         <div class="data-search">
             <input type="text" class="form-control" placeholder="Search...">
-            <button type="submit" id="searchIcon" class="data-btn" style="background-color: #c02323; height: 20px;" >
+            <button type="submit" id="searchIcon" class="data-btn" style="background-color: #c02323; height: 30px;" >
                 enter
             </button>
         </div>
