--- a/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
@@ -1,7 +1,7 @@
 .marketlist-container{
     width:90%;
     border: 1px solid #e5e5e5;
-    border-style:none;
+    /*border-style:none;*/
     margin: 0 auto;
     margin-top:2%;
 }
@@ -49,7 +49,9 @@ input[type="text"]{
 
 .marketing_list_wrap{
     width:100%;
+    height:400px;
     border: 1px solid #000000;
+    position:relative;
 }
 
 .featured-post{
@@ -62,29 +64,105 @@ input[type="text"]{
 .market-img{
     width: 100%;
     height:100%;
-    position: relative;
-    left:0;
-    bottom:0;
+
 }
 
-.content-post{
-    margin-top:15%;
+.market-pro-post-content{
+    font-size:20px;
+    color:#c02323;
+    height:28px;
+    overflow:hidden;
+    border: 1px solid #000000;
+}
+
+.market-post-title{
+    font-size:30px;
+    border: 1px solid #000000;
+    font-weight:bold;
+    width:50%;
+    position:absolute;
+    top:100px;
+    right:0px;
+}
+
+.market-post-name{
+    border: 1px solid #000000;
+    color:#a6a6a6;
+    width:50%;
+    position:absolute;
+    top:150px;
+    right:0px;
+}
+
+.market-post-content{
+    border: 1px solid #000000;
+    height:80px;
+    width:50%;
+    overflow:hidden;
+    position:absolute;
+    bottom:120px;
+    right:0px;
+}
+
+/* .content-post{
+    margin-top:5px;
+    position:absolute;
+    right:5px;
+    over-flow:hidden;
+    height:400px;
 }
 
 .post-title{
   font-size: 24px;
   color: #191919;
+  position:absolute;
+  border: 1px solid #000000;
 }
 
 .post-content{
+   border: 1px solid #000000;
+   width:250px;
+   height:100px;
+    overflow: hidden;
    font-size: 14px;
-   line-height: 36px;
+   line-height: 20px;
    color: #a6a6a6;
+
+}
+
+.post-name{
+    border: 1px solid #000000;
+    margin-top:5px;
+}
+
+.pro-content{
+    border: 1px solid #000000;
+     width:250px;
+     height:50px;
+     font-size: 14px;
+     line-height: 20px;
+     color: #a6a6a6;
+     position:absolute;
+
+     overflow: hidden;
+}
+*/
+
+
+.post-submit{
+border: 1px solid #000000;
+    position:absolute;
+    bottom:10px;
+    right:0px;
+
+
 }
 
 .article-container{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap:15px;
+    grid-template-columns: 50% 50%;
+    grid-template-rows:30% 30% 30%;
+    gap:30px 50px;
 }
+
+
