--- a/wineshare/src/main/resources/templates/cellar/cellarList.html
+++ b/wineshare/src/main/resources/templates/cellar/cellarList.html
@@ -11,11 +11,136 @@
 <!-- 사용자 css -->
 <th:block layout:fragment="css">
   <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/wine-list.css}">
+  <style>
+    .disabled {
+      pointer-events: none; /* 클릭 이벤트 방지 */
+      opacity: 0.1; /* 비활성화된 효과 */
+    }
+    .page-active {
+      background-color: #c02323 !important;
+    }
+    .cellar-wine-img {
+      height: 150px;
+      width: auto;
+    }
+  </style>
 </th:block>
 
 <!--/* 사용자 스크립트 추가 */-->
 <th:block layout:fragment="script">
   <script th:inline="javascript">
+    $(document).ready(function () {
+      read(0);
+    });
+
+    // 셀러목록읽어오기
+    function read(page) {
+      const token = $("meta[name='_csrf']").attr("content");
+      const header = $("meta[name='_csrf_header']").attr("content");
+
+      $.ajax({
+        url: `/cellars/list/${page}`,
+        type: "GET",
+        dataType: 'json',
+        beforeSend: function(xhr) {
+          xhr.setRequestHeader(header, token);
+        },
+        cache: false,
+        success: function (data) {
+          renderCellar(data.cellarWines)
+          updatePagination(data.currentPage, data.totalPages);
+        },
+        error: function (xhr) {
+          console.error("Read Cellar Error ", xhr);
+          alert("셀러 불러오기 실패");
+        }
+      });
+    }
+    function renderCellar(data) {
+      const cellarContainer = $('#cellarContainer');
+      // 비우기
+      cellarContainer.empty();
+      // 테이블 변수 선언
+      const table = `
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th class="image">Image</th>
+                    <th class="product">Wine Name</th>
+                    <th class="type">Type</th>
+                    <th class="type">Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                ${data.map(cellarWine => `
+                    <tr>
+                        <td class="text-center image">
+                            <a href="/wines/wine/${cellarWine.wineId}" class="product-thumb">
+                              <img src="${cellarWine.wineImg === 'https://images.vivino.com/highlights/icon/most_user_rated.svg' ||
+                                      cellarWine.wineImg === 'https://thumbs.vivino.com/avatars/ZlapMkM9QayY3ci79lSL7A_50x50.jpg' ||
+                                      cellarWine.wineImg === 'https://images.vivino.com/highlights/icon/top_ranked.svg'
+                                      ? '/image/wineDefault.png' : cellarWine.wineImg}" alt="${cellarWine.cellarWineId}"
+                                      class="cellar-wine-img"
+                                      onerror="this.onerror=null; this.src='/image/wineDefault.png';">
+                            </a>
+                        </td>
+                        <td class="list text">${cellarWine.wineName}</td>
+                        <td class="text-center list price">${cellarWine.wineType}</td>
+                        <td class="text-center delete">
+                            <button class="close" type="button" aria-label="Close">
+                                <span aria-hidden="true" data-id="${cellarWine.cellarWineId}" onclick="deleteCellarWine(this)">×</span>
+                            </button>
+                        </td>
+                    </tr>
+                `).join('')}
+            </tbody>
+        </table>
+    `;
+      cellarContainer.append(table); // 테이블 추가
+    }
+    // 셀러 페이지네이션
+    function updatePagination(currentPage, totalPages) {
+      const paginationContainer = $('.flat-pagination');
+      paginationContainer.empty(); // 기존 페이지네이션 비우기
+
+      // 이전 버튼
+      const prevDisabled = currentPage === 0 ? 'disabled' : '';
+      paginationContainer.append(`
+                <li class="prev hvr-shutter-out-horizontal ${prevDisabled}">
+                    <a ${prevDisabled ? '' : 'onclick="read(' + (currentPage - 1) + ')"'} aria-label="Previous">
+                        <i class="fa fa-angle-left" aria-hidden="true"></i>
+                    </a>
+                </li>
+            `);
+
+      // maxPage 정의
+      const maxPage = 5;
+
+      // 페이지 번호 계산
+      let start = Math.floor(currentPage / maxPage) * maxPage; // 현재 페이지 기준으로 시작
+      let end = Math.min(start + maxPage, totalPages); // 최대 maxPage 개수 표시
+      // 페이지 번호 추가
+      for (let i = start; i < end; i++) {
+        const activeClass = i === currentPage ? 'page-active' : '';
+        paginationContainer.append(`
+                    <li class="hvr-shutter-out-horizontal ${activeClass}">
+                        <a onclick="read(${i})" aria-label="Page">${i+1}</a>
+                    </li>
+                `);
+      }
+      // 다음 버튼
+      const nextDisabled = currentPage === totalPages - 1 ? 'disabled' : '';
+      paginationContainer.append(`
+                <li class="next hvr-shutter-out-horizontal ${nextDisabled}">
+                    <a ${nextDisabled ? '' : 'onclick="read(' + (currentPage + 1) + ')"'}  aria-label="Next">
+                        <i class="fa fa-angle-right" aria-hidden="true"></i>
+                    </a>
+                </li>
+            `);
+    }
+
+
+    // 셀러에서 와인 삭제
     function deleteCellarWine(obj){
       console.log("obj => " + obj);
       const cellarWineId = obj.dataset.id;
@@ -77,32 +202,14 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="woocommerce-tabs wc-tabs-wrapper">
-              <div id="tab-description" class="tab-content">
-                <table class="table table-bordered">
-                  <thead>
-                  <tr>
-                    <th class="image">Image</th>
-                    <th class="product">Wine Name</th>
-                    <th class="type">Type</th>
-                    <th class="delete">×</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr th:each="cellarWine : ${cellarWines}">
-                    <td class="text-center image"><img th:src="${cellarWine.wineImg}" th:alt="${cellarWine.cellarWineId}"></td>
-                    <td class="list text" th:text="${cellarWine.wineName}"></td>
-                    <td class="text-center list price" th:text="${cellarWine.wineType}"></td>
-                    <td class="text-center delete">
-                      <button class="close" type="button" aria-label="Close">
-                                        <span aria-hidden="true" th:data-id="${cellarWine.cellarWineId}"
-                                              onclick="deleteCellarWine(this)">x</span>
-                      </button>
-                    </td>
-                  </tr>
-
-                  </tbody>
-                </table>
+              <div id="cellarContainer" class="tab-content">
+                <!-- 셀러 테이블 자리 -->
               </div>
+            </div>
+            <div class="blog-pagination text-center">
+              <ul class="flat-pagination">
+                <!-- 페이지네이션 자리 -->
+              </ul>
             </div>
           </div>
         </div>
