--- a/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
@@ -1,9 +1,11 @@
 .marketlist-container{
     width:90%;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #FFFFFF;
     /*border-style:none;*/
     margin: 0 auto;
     margin-top:2%;
+    margin-bottom:2%;
+    margin-right:100px;
 }
 
 .search-sort{
@@ -51,6 +53,7 @@ input[type="text"]{
     width:100%;
     height:400px;
     border: 1px solid #000000;
+
     position:relative;
 }
 
@@ -73,35 +76,43 @@ input[type="text"]{
     height:28px;
     overflow:hidden;
     border: 1px solid #000000;
+    width:45%;
+    position:absolute;
+    top:50px;
+    right:0px;
+    border-style:none;
 }
 
 .market-post-title{
     font-size:30px;
     border: 1px solid #000000;
     font-weight:bold;
-    width:50%;
+    width:45%;
     position:absolute;
     top:100px;
     right:0px;
+    border-style:none;
 }
 
 .market-post-name{
     border: 1px solid #000000;
     color:#a6a6a6;
-    width:50%;
+    width:45%;
     position:absolute;
     top:150px;
     right:0px;
+    border-style:none;
 }
 
 .market-post-content{
     border: 1px solid #000000;
-    height:80px;
-    width:50%;
+    height:85px;
+    width:45%;
     overflow:hidden;
     position:absolute;
     bottom:120px;
     right:0px;
+    border-style:none;
 }
 
 /* .content-post{
@@ -154,7 +165,7 @@ border: 1px solid #000000;
     position:absolute;
     bottom:10px;
     right:0px;
-
+    border-style:none;
 
 }
 
@@ -162,7 +173,7 @@ border: 1px solid #000000;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows:30% 30% 30%;
-    gap:30px 50px;
+    gap:30px 80px;
 }
 
 
